added sections and updated message and added image
I have updated the page by adding two more layouts main and footer layouts to make the code readable for me and others.
I also added my personal image to make the page attractive, also updated messages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <!--Header section-->
     <header>
         <nav>
@@ -20,31 +19,40 @@
             </ul>
         </nav>
     </header>
+    <main>
     <!--Intro  section-->
     <h2>Personal info</h2>
-    <p>name</p>
-    <p>my current role</p>
-    <p>description skills and intersts</p>
+    <p>My Name is Mulualem Adisu</p>
+    <p>I am fourth year computer science and Engineering student @ Adama Science and Technology university,Adama </p>
+    <p>In the fast four years as computer science and engineering student @ ASTU ,I have learned many computer science and some electrical engineering courses ,I listed some of them bellow</p> 
+        <ul>
+            <li>database systems </li>
+            <li>Introduction programing ,Python </li>
+            <li>fundamental of programming C++ </li>
+            <li>Java programming </li>
+            <li>data structure and algorthim </li>
+            <li>computer archtecture and organization </li>
+            <li>Computer System security</li>
+            <li>fundamenta of electircal engineering  </li>
+            <li>electical circuitI </li>
+        </ul>
     <p>photo</p>
-    <img src="" alt="the photo is to be added">
+    <img src="IMG_1029aa.jpg" alt="the photo is to be added">
     <p>resume/cv section</p>
     <!--project section-->
-<h2>projects</h2>
+    <h2>projects</h2>
     <section>
-      <p>add 3 - 6 sample projects Title and description</p>
-      <p>skills and technology used</p>
-      <p>screen shots of demos</p>
-      <p>provide link for github repo of the projects</p>
-      <p>challengs and solution</p>
-      
-
+        <p>add 3 - 6 sample projects Title and description</p>
+        <p>skills and technology used</p>
+        <p>screen shots of demos</p>
+        <p>provide link for github repo of the projects</p>
+        <p>challengs and solution</p>
     </section>
     <!--about section-->
     <h2>about</h2>
     <section>
         <p>share my journey,background and why you are passionate about development</p>
         <p>highlight my current focus learning kotlin for android dev</p>
-
     </section>
     <!--contacts -->
     <section id="contact">
@@ -62,8 +70,9 @@
     <section id="testmony"> testomonial</section>
     <section id=""blog>blog</section>
     <section id="cta">call to action - hire me</section>
-
-   
-
+</main>
+<footer>
+    all rights reserved &copy; 2024
+</footer>
 </body>
 </html>
