--- a/index.html
+++ b/index.html
@@ -4,51 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mulualem Adisu</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <!--Header section-->
     <header>
         <nav>
-            <ul>
-                <li><a href="about">About</a></li>
-                <li><a href=projects">About</a></li>
-                <li><a href="#skills">About</a></li>
-                <li><a href="#contacts">About</a></li>
-                <li><a href="">About</a></li>
-            </ul>
+            <a id="about_link" href="about">About</a>
+            <a id="projects_link"href=projects">projects</a>
+            <a id="skills_link"href="#skills">Skills</a>
+            <a id="contacts_link"href="#contacts">contacts</a>
         </nav>
     </header>
     <main>
-    <!--Intro  section-->
-    <h2>Personal info</h2>
-    <p>My Name is Mulualem Adisu</p>
-    <p>I am fourth year computer science and Engineering student @ Adama Science and Technology university,Adama </p>
-    <p>In the fast four years as computer science and engineering student @ ASTU ,I have learned many computer science and some electrical engineering courses ,I listed some of them bellow</p> 
-        <ul>
-            <li>database systems </li>
-            <li>Introduction programing ,Python </li>
-            <li>fundamental of programming C++ </li>
-            <li>Java programming </li>
-            <li>data structure and algorthim </li>
-            <li>computer archtecture and organization </li>
-            <li>Computer System security</li>
-            <li>fundamenta of electircal engineering  </li>
-            <li>electical circuitI </li>
-        </ul>
-    <p>photo</p>
-    <img src="IMG_1029aa.jpg" alt="the photo is to be added">
-    <p>resume/cv section</p>
-    <!--project section-->
-    <h2>projects</h2>
-    <section>
-        <p>add 3 - 6 sample projects Title and description</p>
-        <p>skills and technology used</p>
-        <p>screen shots of demos</p>
-        <p>provide link for github repo of the projects</p>
-        <p>challengs and solution</p>
-    </section>
-    <!--about section-->
+        <!--Intro  section-->
+        <section>
+            <h2>Personal info</h2>
+            <p>My Name is Mulualem Adisu</p>
+            <p>I am fourth year computer science and Engineering student @ Adama Science and Technology university,Adama </p>
+            <p>In the fast four years as computer science and engineering student @ ASTU ,<br>I have learned many computer science and some electrical engineering courses ,I listed some of them bellow</p>
+            <ul>
+                <li>database systems </li>
+                <li>Introduction programing ,Python </li>
+                <li>fundamental of programming C++ </li>
+                <li>Java programming </li>
+                <li>data structure and algorthim </li>
+                <li>computer archtecture and organization </li>
+                <li>Computer System security</li>
+                <li>fundamenta of electircal engineering  </li>
+                <li>electical circuitI </li>
+            </ul>
+        </section>
+        <img src="IMG_1029aa.jpg" alt="the photo is to be added">
+        <p> in this section i will appload cv <br> resume/cv section</p>
+        <!--project section-->
+        <section>
+            <h2>projects</h2>
+            <p>add 3 - 6 sample projects Title and description</p>
+            <p>screen shots of demos</p>
+            <p>provide link for github repo of the projects</p>
+        </section>
+        <!-- skills section-->
+        <section>
+            <h2>skills and tech</h2>
+            <p>skills and technology used</p>
+            <p>challengs and solution</p>
+        </section>
+        <!--about section-->
     <h2>about</h2>
     <section>
         <p>share my journey,background and why you are passionate about development</p>
@@ -70,6 +72,9 @@
     <section id="testmony"> testomonial</section>
     <section id=""blog>blog</section>
     <section id="cta">call to action - hire me</section>
+    <aside>
+        
+    </aside>
 </main>
 <footer>
     all rights reserved &copy; 2024
